--- a/style.css
+++ b/style.css
@@ -265,6 +265,7 @@ h4{
 /*---main-page--*/
 .flexbox{
     display: flex;
+    flex-wrap: wrap;
     gap:20px;
     margin-left: 1%;
     margin-top: 0.5%;
