--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 /*-- Top-section--*/
 @media screen and (min-width: 580px) {
-    .Navbar{
+.Navbar{
     width:100vw;
     height: 70px;
     border-bottom: 1px solid lightgray;
     display: flex;
     align-items: center;
-    gap:5%
+    gap:5%;
+    overflow: hidden;
+
 }
 p{
     font-size: 14.5px;
@@ -47,7 +49,6 @@ p{
     gap:25px;
     text-align: center;
     justify-content: space-between;
-  
 }
 
 .search-bar:hover{
@@ -99,6 +100,7 @@ p{
     font-weight: bold;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
+
 .btn-line:hover{
     box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.612);
     background-color: #eeeeeeb5;
@@ -130,6 +132,7 @@ p{
     align-items: center;
     width:80px;
     height:120px;
+   
 }
 .sub-icon{
     width:22.5px;
@@ -140,9 +143,17 @@ p{
 .sub-section{
     display: flex;
     align-items: center;
-    gap:35px;
-    margin-left: 10px;
+    gap:8px;
+    overflow: hidden;
+    
+}
+.section{
+    display: flex;
+    align-items: center;
+    gap:15px;
     height:120px;
+   
+
 }
 
 .item:hover hr{
@@ -168,6 +179,8 @@ h4{
     margin-top: 7%;
     font-weight: lighter;
     margin-bottom: 25%;
+    text-align: center;
+    text-wrap: nowrap;
 }
 .title-1{
     color: black;;
@@ -190,18 +203,21 @@ h4{
     border-radius: 50%;
     background-color: white;
     border:1px soild lightgrey;
+    position: relative;
+    left:-30px;
 }
 .filters-button{
     display: flex;
     width:95px;
     height: 45px;
     align-items: center;
-    gap: 15px;
+    gap: 2px;
     background-color: transparent;
     border: 1px solid lightgray;
     padding: 1.5%;
     border-radius: 10%;
     justify-items: center;
+    margin-left: -25px;
 
 }
 
@@ -209,7 +225,7 @@ h4{
     display: flex;
     width:420px;
     height: 45px;
-    gap:10px;
+    gap:5px;
     background-color: transparent;
     border: 1px solid lightgray;
     padding: 1.5%;
@@ -269,6 +285,7 @@ h4{
     gap:20px;
     margin-left: 1%;
     margin-top: 0.5%;
+    overflow: hidden;
 }
 .card{
     width:280px;
